# foxford_api

./: .gitignore  LICENSE  README.md  README.rst  README_EN.md  README_RU.md  custom_test.py  pyproject.toml  req.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: custom-pytest.yml  greetings.yml  pytest-app.yml  python-app.yml  python-publish.yml
FOXFORD_API.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: README.md  SUMMARY.md  index.html  index.md
docs/en-docs/classes/: README.md  selfprofile.md
docs/ru-docs/: get_me.md  get_user.md  nachalo.md
docs/ru-docs/klassy/: selfprofile.md  userprofile.md
docы/: README.md
docы/en-docs/: start.md
docы/ru-docs/: get_me.md
docы/ru-docs/klassy/: README.md
fapi/: FAPI_Core.py  FAPI_Main.py  __init__.py  foxford_api.py  foxford_api_classes.py  foxford_api_datatypes.py  foxford_api_errors.py  foxford_api_utils.py
fapi-old/: __init__.py  foxford_api.py  foxford_api_classes.py
fapi/FAPI_Errors/: Core_exception.py  __init__.py
tests/: test_class_fox_bonus.py  test_class_user_profile.py  test_utils.py
